--- a/exercicios/ex0026/mq005/estilos/style.css
+++ b/exercicios/ex0026/mq005/estilos/style.css
@@ -19,8 +19,23 @@ header > h1{
     text-align: center;
 }
 
-menu{
+i.material-icons{
+    background-color: rgb(48, 48, 48);
+    color: white;
     display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+
+}
+
+i.material-icons:hover{
+    background-color: white;
+    color: black;
+}
+
+menu{
+    display: none;
 }
 
 menu > ul{
